--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,3 +31,15 @@ app-home {
   border: 0 !important;
   border-top: 1px solid rgba($color: #000000, $alpha: 0.1) !important;
 }
+
+*::-webkit-scrollbar,
+*::-webkit-scrollbar-thumb {
+  width: 26px;
+  border-radius: 13px;
+  background-clip: padding-box;
+  border: 10px solid transparent;
+}
+
+*::-webkit-scrollbar-thumb {        
+  box-shadow: inset 0 0 0 10px;
+}
