--- a/src/app/dialog-add-direct-message/dialog-add-direct-message.component.html
+++ b/src/app/dialog-add-direct-message/dialog-add-direct-message.component.html
@@ -5,7 +5,7 @@
     <mat-label>Channel name</mat-label>
     <input matInput [(ngModel)]="newDirectMessage.name">
   </mat-form-field>
-  <p>What would you like to call your new Members ?</p>
+  <p>Who would you like to create a Chat with ?</p>
   <mat-form-field appearance="fill">
     <mat-label>Users</mat-label>
     <mat-select [formControl]="selectedUsers" multiple>
