added colappsible menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,16 @@
 <mat-drawer-container class="container">
   <mat-drawer class="side-drawer" mode="side" opened>
 
-    <div class="server-title">Slackclone test</div>
+    <div class="server-title">Slackclone</div>
 
-
+    
+    
     <div *ngIf="auth.userKey" id="side-nav-content">
+      <details>
+      <summary>
       <b class="sidenav-mini-title">Channels</b>
+      <span class="icon"><img src="assets/img/arrow-204-16.ico" alt=""></span>
+    </summary>
       <div>
         <ul>
           <li class="channels-container basic-hover"
@@ -17,6 +22,7 @@
           <li (click)="openDialog()" class="sidenav-mini-title basic-hover">+ Add Channel</li>
         </ul>
       </div>
+    </details>
 
       <details>
       <summary>
