--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
             </div>
             <div [innerHTML]="message.content"></div>
             <div *ngFor="let imgURL of message.imageLinks">
-              <a [href]="imgURL"
+              <a [href]="imgURL" target="_blank"
                 ><img [src]="imgURL" width="100" height="100"
               /></a>
             </div>
@@ -78,6 +78,23 @@
         </button>
       </div>
       <div class="threads-container">
+        <div class="flex">
+          <img class="profile-picture" src="assets/img/Download.png" alt="" />
+          <div>
+            <div class="first-row">
+              <div class="name">
+                {{ getUserById(currentMessage.author).displayName }}
+              </div>
+              <div class="time">{{ currentMessage.time | date: "medium" }}</div>
+            </div>
+            <div [innerHTML]="currentMessage.content"></div>
+            <div *ngFor="let imgURL of currentMessage.imageLinks">
+              <a [href]="imgURL" target="_blank"
+                ><img [src]="imgURL" width="100" height="100"
+              /></a>
+            </div>
+          </div>
+        </div>
         <div *ngFor="let thread of activeThread" class="flex">
           <img class="profile-picture" src="assets/img/Download.png" alt="" />
           <div>
@@ -85,11 +102,11 @@
               <div class="name">
                 {{ getUserById(thread.author).displayName }}
               </div>
-              <div class="time">{{ currentMessage.time | date: "medium" }}</div>
+              <div class="time">{{ thread.time | date: "medium" }}</div>
             </div>
             <div [innerHTML]="thread.content"></div>
             <div *ngFor="let imgURL of thread.imageLinks">
-              <a [href]="imgURL"
+              <a [href]="imgURL" target="_blank"
                 ><img [src]="imgURL" width="100" height="100"
               /></a>
             </div>
