--- a/src/app/dialog-edit-messages/dialog-edit-messages.component.html
+++ b/src/app/dialog-edit-messages/dialog-edit-messages.component.html
@@ -1,4 +1,4 @@
 hello
 <input type="text" name="" id="edit-message-input" />
-<button>delete</button>
-<button></button>
+<button (click)="deleteMessage()">delete</button>
+<button (click)="editMessage()">edit</button>
