--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -102,3 +102,11 @@ summary::-webkit-details-marker {
   align-items:center;
   width: 90%;
 }
+
+
+  @media only screen and(max-width: 1000px) {
+    .side-drawer{
+      width:200px !important;
+    }
+
+  }
