some styling fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container class="container">
+<mat-drawer-container class="container"  autosize>
   <mat-drawer class="side-drawer" mode="side" opened>
 
     <div class="server-title">Slackclone</div>
