--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -104,9 +104,9 @@ summary::-webkit-details-marker {
 }
 
 
-  @media only screen and(max-width: 1000px) {
-    .side-drawer{
-      width:200px !important;
-    }
+  // @media(max-width: 1000px) {
+  //   .side-drawer{
+  //     width:200px !important;
+  //   }
 
-  }
+  // }
