--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 
   h2 {
-    border-bottom: solid 1px rgba($color: #000000, $alpha: 0.1);
+    // border-bottom: solid 1px rgba($color: #000000, $alpha: 0.1);
     margin: 0 !important;
   }
 }
