--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -103,6 +103,14 @@ summary::-webkit-details-marker {
   width: 90%;
 }
 
+.toggle-btn{
+  position:absolute;
+  top:0;
+  left:0;
+  z-index:777;
+  color:white;
+}
+
 
   // @media(max-width: 1000px) {
   //   .side-drawer{
