--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -40,6 +40,7 @@
   width: 30px;
   height: 30px;
   margin: 5px 10px 0px 10px;
+  padding-left:10px;
 }
 
 .name {
@@ -65,7 +66,7 @@
 .editor-div {
   position: sticky;
   bottom: 0;
-  margin: 0 8px;
+  margin: 0 20px;
   // border: 1px solid #80808094;
 
   editor {
