--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -62,10 +62,7 @@
             branding: false,
             menubar: false,
             statusbar: false,
-            browser_spellcheck: true,
-            plugins: 'image',
-            images_file_types: 'jpg,svg,webp',
-            file_picker_types: 'image'
+            browser_spellcheck: true
           }"
           [(ngModel)]="htmlMessage"
         >
@@ -157,7 +154,6 @@
 
         <div class="editor-div-thread">
           <editor
-            apiKey="z8iu1rie4176in15qglvib02tl493lahzojojurs7xl4iody"
             [init]="{
               toolbar:
                 'undo redo | bold italic | alignleft aligncenter alignright alignjustify | outdent indent',
