--- a/src/app/dialog-edit-channel/dialog-edit-channel.component.html
+++ b/src/app/dialog-edit-channel/dialog-edit-channel.component.html
@@ -17,11 +17,11 @@
   </div>
 
   <div mat-dialog-actions>
-    <button mat-button color="primary"
+    <button mat-button
       (click)="dialogRef.close()">
-      Cancle
+      Cancel
     </button>
-    <button mat-raised-button color="primary"
+    <button mat-button
       (click)="editChannel(name.value, description.value)">
       Rename
     </button>
