--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <div class="home-container">
   <div class="div-message-thread">
     <div class="messages">
+      <div class="channel-header">
       <h2>{{ activeChannel.name }}</h2>
       <div *ngIf="activeChannel.users" style="border-bottom: solid 1px rgba(0, 0, 0, 0.1);">
         <span *ngFor="let user of activeChannel.users">
@@ -9,6 +10,7 @@
       </div>
       <div *ngIf="activeChannel.description"  style="border-bottom: solid 1px rgba(0, 0, 0, 0.1);">
         {{activeChannel.description}}
+      </div>
       </div>
       <div class="messages-container" #messagesChannel>
         <div
