--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
           {{getUserById(user).displayName}}
         </span>
       </div>
-      <div *ngIf="activeChannel.description"  style="border-bottom: solid 1px rgba(0, 0, 0, 0.1);">
+      <div *ngIf="activeChannel.description">
         {{activeChannel.description}}
       </div>
       </div>
