--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -101,6 +101,9 @@
 
 .thread-header {
   position: relative;
+  padding-left:20px;
+  border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+  height:52px;
 
   button {
     position: absolute;
@@ -150,6 +153,7 @@
 }
 
 .channel-header{
-  margin-left:20px;
+  padding-left:20px;
+  border-bottom: solid 1px rgba(0, 0, 0, 0.1);
 }
 
