edit chat options implemented

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home-container">
   <div class="div-message-thread">
-    <div class="messages">
+    <div #messagesDiv class="messages">
       <div class="channel-header">
       <h2>{{ activeChannel.name }}</h2>
       <div *ngIf="activeChannel.users" style="border-bottom: solid 1px rgba(0, 0, 0, 0.1);">
