--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,8 +44,17 @@
             [routerLink]="['home', auth.userKey, message.directMessageId]"
           >
             {{ message.name }}
+            <button mat-icon-button 
+              [matMenuTriggerFor]="taskMenuDirectMessage"
+              class="delete">
+              <mat-icon>more_vert</mat-icon>
+            </button>
+            <mat-menu #taskMenuDirectMessage="matMenu">
+              <button mat-menu-item (click)="editChat(message)">Edit</button>
+              <button mat-menu-item (click)="deleteChat(message)">Delete</button>
+            </mat-menu>
           </li>
-        
+
           <li (click)="openDialogDirectMessage()" class="sidenav-mini-title basic-hover">+ Add Direct Message</li>
        
         </ul>
