--- a/src/app/dialog-edit-chat/dialog-edit-chat.component.html
+++ b/src/app/dialog-edit-chat/dialog-edit-chat.component.html
@@ -1,1 +1,24 @@
-<p>dialog-edit-chat works!</p>
+<div class="dialog-container">
+
+  <h1 mat-dialog-title>Edit direct Message Channel</h1>
+
+  <div mat-dialog-content>
+    <mat-form-field appearance="outline" class="mr-16">
+      <mat-label>Name</mat-label>
+      <input matInput #name>
+    </mat-form-field>  
+  </div>
+
+  <div mat-dialog-actions>
+    <button mat-button
+      (click)="dialogRef.close()">
+      Cancel
+    </button>
+    <button mat-button
+      (click)="editChannel(name.value)">
+      Rename
+    </button>
+  </div>
+
+</div>
+
