--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
       </summary>
       <div>
         <ul>
-          <li class="channels-container basic-hover"
+          <li class="channels-container basic-hover align-sidenav-content"
             *ngFor="let message of allDirectMessages"
             [routerLink]="['home', auth.userKey, message.directMessageId]"
           >
