--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home-container">
   <div class="div-message-thread">
-    <div #messagesDiv class="messages">
+    <div class="messages" #messagesDiv>
       <div class="channel-header">
       <h2>{{ activeChannel.name }}</h2>
       <div *ngIf="activeChannel.users" style="border-bottom: solid 1px rgba(0, 0, 0, 0.1);">
@@ -63,7 +63,8 @@
             height: 150,
             branding: false,
             menubar: false,
-            statusbar: false,
+            statusbar: true,
+            elementpath: false,
             browser_spellcheck: true
           }"
           [(ngModel)]="htmlMessage"
