--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,3 +61,8 @@ app-home {
 *::-webkit-scrollbar-thumb {
   box-shadow: inset 0 0 0 10px rgba(128, 128, 128, 0.473);
 }
+
+
+.tox-statusbar {
+  height: 35px!important;
+}
